Bug 454714 - Inconsistent hover state handling in desktop applets' own full representation popups
Summary: Inconsistent hover state handling in desktop applets' own full representation...
Status: RESOLVED FIXED
Alias: None
Product: libplasma
Classification: Frameworks and Libraries
Component: libplasma (other bugs)
Version First Reported In: 5.95.0
Platform: Other Linux
: NOR minor
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords: regression
: 454657 454719 (view as bug list)
Depends on:
Blocks:
 
Reported: 2022-06-01 20:29 UTC by ratijas
Modified: 2022-08-31 19:54 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.98
Sentry Crash Report:


Attachments
Applets hovering bug (3.35 MB, video/mp4)
2022-06-01 20:29 UTC, ratijas
Details

Note You need to log in before you can comment on or make changes to this bug.
Description ratijas 2022-06-01 20:29:45 UTC
Created attachment 149384 [details]
Applets hovering bug

SUMMARY

Sliders do not hover under certain circumstances.

STEPS TO REPRODUCE
1. Add Battery & Brightness applet to the desktop, make sure it has compact representation view.
2. Click on it to open the full representation popup dialog.
3. Hover over brightness sliders.

OBSERVED RESULT
Sliders do not highlight on hover. However, the checkbox in the header highlights alright.

This issue also doesn't happen if an applet is opened from system tray, or when it is expanded right on the desktop containment.

Hover events are not blocked completely, because as we can see tooltips are working correctly (there are two of them under the performance slider -- the icons).

EXPECTED RESULT
Hovering should highlight the sliders regardless of where the widget is located or how is it being used.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux
KDE Plasma Version: 5.25.80
KDE Frameworks Version: 5.95.0
Qt Version: 5.15.4
Kernel Version: 5.18.0-arch1-1 (64-bit)
Graphics Platform: X11
Processors: 8 × Intel® Core™ i7-6700HQ CPU @ 2.60GHz
Memory: 15.6 GiB of RAM
Graphics Processor: NVIDIA GeForce GTX 970M/PCIe/SSE2
Comment 1 ratijas 2022-06-04 18:01:59 UTC
*** Bug 454657 has been marked as a duplicate of this bug. ***
Comment 2 Nate Graham 2022-06-13 18:53:11 UTC
*** Bug 454719 has been marked as a duplicate of this bug. ***
Comment 4 ratijas 2022-08-30 13:59:51 UTC
Git commit 86ce64109fef3aa0ddc642101c209f38e4eb333e by ivan tkachenko.
Committed on 29/08/2022 at 08:48.
Pushed by ratijas into branch 'master'.

PlasmaDialog: Don't constantly reset cursor when resizable edges are ON

Fixes cursor shapes inside Plasma applets, such as hovering over text
fields etc.

See also: https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/550
FIXED-IN: 5.98

M  +7    -1    src/plasmaquick/dialog.cpp

https://invent.kde.org/frameworks/plasma-framework/commit/86ce64109fef3aa0ddc642101c209f38e4eb333e
Comment 5 ratijas 2022-08-31 10:39:09 UTC
Actually, wrong bug for the patch. I fixed the cursor, but not the hovering state for sliders.
Comment 6 Nate Graham 2022-08-31 13:54:30 UTC
Are you sure? I get the correct hover state over slider handles in the Battery and Audio applets now.
Comment 7 Bug Janitor Service 2022-08-31 17:13:30 UTC
A possibly relevant merge request was started @ https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/592
Comment 8 ratijas 2022-08-31 19:54:47 UTC
Git commit 9cc3f9ee5a648cf88c3b321c61e79296ee27f9d1 by ivan tkachenko.
Committed on 31/08/2022 at 17:06.
Pushed by ratijas into branch 'master'.

PC3/Slider: Enable hover events

Set it explicitly instead of relying on implicit propagation chain.

M  +1    -0    src/declarativeimports/plasmacomponents3/Slider.qml

https://invent.kde.org/frameworks/plasma-framework/commit/9cc3f9ee5a648cf88c3b321c61e79296ee27f9d1