PlasmaDialog: Don't constantly reset cursor when resizable edges are ON

Fixes cursor shapes inside Plasma applets, such as hovering over text
fields etc.

See also: https://invent.kde.org/frameworks/plasma-framework/-/merge_requests/550

BUG: 454714
FIXED-IN: 5.98